--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database = MYSQL
 
-spring.datasource.url=jdbc:mysql://melaniedb.cbtnxurckntc.us-west-2.rds.amazonaws.com:3306/techshop?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username=admin
-spring.datasource.password=maximus17
+spring.datasource.url= jdbc:mysql://localhost:3306/techshop 
+#usar mi datasource para que conecte a mi SQL y mi pagina
+spring.datasource.username= root 
+#Mi user
+spring.datasource.password= W0lfG4ng180304.
+#Mi contraseña
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
