--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,17 @@
 # aqui van todas la configuraciones de cuando se cargo el proyecto
 server.port=80
 
+ 
+
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.database = MYSQL
 
-spring.datasource.url= jdbc:mysql://localhost:3306/techshop 
-#usar mi datasource para que conecte a mi SQL y mi pagina
-spring.datasource.username= root 
-#Mi user
-spring.datasource.password= W0lfG4ng180304.
-#Mi contraseña
+ 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/techshop
+spring.datasource.username=usuario_prueba
+spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.max-lifetime=6000
