--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,14 @@ spring.datasource.username=usuario_prueba
 spring.datasource.password=Usuar1o_Clave.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.max-lifetime=6000
+
+#Definiendo información para utilizar cuenta de Correo para usuarios
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=jd.sanchez.gamboa@gmail.com
+spring.mail.password=goxskpuzkoxcteyu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#nombre del servidor para enviar el correo
+servidor.http=localhost
